# Practica-1-EDA-

./: CMakeLists.txt
resources/: 1.txt
src/headers/: common.h  dungeon.h  dungeon_utils.h  game.h  menu.h  room.h  state.h  utils.h  wall.h
src/sources/: dungeon.c  dungeon_utils.c  game.c  menu.c  room.c  state.c  utils.c  wall.c
